# nanoFluid4Foam

./: Allwclean  Allwmake  README.md
applications4NF/: Allwmake  CMakeLists.txt
applications4NF/solvers4NF/: CMakeLists.txt
applications4NF/utilities4NF/: CMakeLists.txt
src/: Allwmake
src/Make/: files
src/postProcessing/: Allwmake
src4NF/: CMakeLists.txt
src4NF/Make/: files
src4NF/NFThermophysicalModels/: CMakeLists.txt
src4NF/foam4NF/: CMakeLists.txt
src4NF/postProcessing4NF/: Allwmake  CMakeLists.txt
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/: CMakeLists.txt
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/LNH4NF/: IOLNH4NF.H  LNH4NF.C  LNH4NF.H  LNH4NFFunctionObject.C  LNH4NFFunctionObject.H
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/Make/: files  options
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/WSS4NF/: IOWSS4NF.H  WSS4NF.C  WSS4NF.H  WSS4NFFunctionObject.C  WSS4NFFunctionObject.H
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/helicity4NF/: IOhelicity4NF.H  helicity4NF.C  helicity4NF.H  helicity4NFFunctionObject.C  helicity4NFFunctionObject.H
src4NF/postProcessing4NF/functionObjects4NF/utilities4NF/magWSS4NF/: IOmagWSS4NF.H  magWSS4NF.C  magWSS4NF.H  magWSS4NFFunctionObject.C  magWSS4NFFunctionObject.H
src4NF/radiation4NF/: CMakeLists.txt
tutorials/: materialsDict.H  nanoFluidProperties
tutorials/blockMeshDict_m4/: Allclean  Allrun  CITATION.cff  README.md  blockMeshDictConicalCylinder.tif  blockMeshDictConicalCylinderAndExternalSquare.tif  blockMeshDictConicalCylinderAndTrapezoidalSquare.tif  blockMeshDictConicalCylinderCHT.tif  blockMeshDictConicalRectangular.tif  blockMeshDictHollowCone.tif  blockMeshDictSemiAnnulus.tif  blockMeshDictSemiCylinder.tif  blockMeshDictTrapezoid.tif  (+1 more)
tutorials4NF/: materialsDict.H  nanoFluidProperties
(+801 files in other folders)
